# gitai

./: .gitignore  .semgrep.yml  AST_GREP_API_RESEARCH.md  AST_GREP_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.workspace.toml  GitAI_Diagnostic_Report.md  GitAI_Refactor_Plan.md  GitAI_真实完成度评估报告.md  IMPLEMENTATION_STATUS.md  LICENSE  MCP_CHATWISE_SETUP.md  MCP_SETUP_GUIDE.md  OPTIMIZATION_PLAN.md  PROGRESS_TRACKING.md  PROJECT_STRUCTURE.md  PROMPT_INTEGRATION.md  README.md  REFACTORING_REFLECTION.md  SCAN_CONFIG_TEMPLATE.toml  SCAN_FEATURE_COMPLETION_REPORT.md  SCAN_FEATURE_DEVELOPMENT.md  TREESITTER_COMPATIBILITY_FIX.md  Tasks.md  VERIFICATION_REPORT.md  WARP.md  build.rs  check_serviceerror.rs  claude_config.json  commit_test.md  config.example.toml  context7_config.json  debug_scan.rs  dependency_graph.dot  dependency_graph_ascii.txt  deps.dot  explore_rmcp_api.rs  fix-giterror-usage.sh  (+34 more)
.claude/: settings.local.json
.cursor/rules/: RIPER-5-CN.md
.github/workflows/: build-releases.yml  ci.yml  quality.yml  semgrep.yml
.serena/: project.yml
.serena/memories/: tree-sitter-optimization-completed.md
.tasks/: 2025-09-06_1_refactor-analysis.md
assets/: config.enhanced.toml  config.example.toml  helper-prompt.md  tree-sitter-queries.toml
assets/prompts/: commit-generator.md  commit.md  (+3 more)
benches/: architectural_impact_bench.rs  container_v2_bench.rs  core_benchmark.rs  tree_sitter_bench.rs  tree_sitter_concurrency_bench.rs
crates/gitai-adapters/: Cargo.toml
crates/gitai-adapters/src/: ai.rs  devops.rs  lib.rs
crates/gitai-analysis/: Cargo.toml
crates/gitai-analysis/src/: analysis.rs  lib.rs
crates/gitai-analysis/src/architectural_impact/: ai_context.rs  ast_comparison.rs  breaking_changes.rs  cascade_detector.rs  dependency_graph.rs  git_state_analyzer.rs  graph_export.rs  impact_propagation.rs  impact_report.rs  mod.rs  risk_assessment.rs
crates/gitai-analysis/src/tree_sitter/: analyzer.rs  cache.rs  mod.rs  queries.rs  unified_analyzer.rs
crates/gitai-analysis/src/utils/: error_handling.rs  paths.rs
crates/gitai-bin/: Cargo.toml
crates/gitai-cli/: Cargo.toml
crates/gitai-cli/src/: app.rs  args.rs  handlers.rs  lib.rs  main.rs
crates/gitai-cli/src/handlers/: commit.rs  config.rs  evaluation.rs  features.rs  git.rs  graph.rs  init.rs  mcp.rs  metrics.rs  prompts.rs  review.rs  scan.rs  update.rs
crates/gitai-core/: Cargo.toml
crates/gitai-core/src/: adapters.rs  ai.rs  cache.rs  commit.rs  config.rs  config_impl.rs  config_test.rs  context.rs  domain_errors.rs  error.rs  git.rs  git_impl.rs  lib.rs
crates/gitai-core/src/interfaces/: ai.rs  cache.rs  config.rs  devops.rs  git.rs  mod.rs  review.rs  scan.rs
crates/gitai-core/src/services/: application.rs  config.rs  workflow.rs
crates/gitai-core/src/utils/: error_handling.rs
crates/gitai-evaluation/: Cargo.toml
crates/gitai-evaluation/src/: lib.rs
crates/gitai-mcp/: Cargo.toml
crates/gitai-mcp/src/: bridge.rs  error.rs  http.rs  lib.rs  main.rs  manager.rs  registry.rs  server.rs  services.rs
crates/gitai-metrics/: Cargo.toml
crates/gitai-metrics/src/: collector.rs  lib.rs  storage.rs  tracker.rs
crates/gitai-security/: Cargo.toml
crates/gitai-security/src/: lib.rs  scanner.rs
crates/gitai-types/: Cargo.toml
crates/gitai-types/src/: change.rs  common.rs  entities.rs  error.rs  lib.rs  risk.rs
docs/: AI_ANALYSIS_INTEGRATION.md  AI_ERA_SECURITY.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_REFACTOR.md  CLEANUP_PLAN.md  CONFIG_ADAPTATION_DESIGN.md  CONFIG_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  FEATURE_FLAGS.md  FUNCTIONALITY_AUDIT.md  GRAPH_SUMMARIZATION_PLAN.md  MCP_INTEGRATION_GUIDE.md  MCP_TOOLS_GUIDE.md  NETWORK_COMPATIBILITY.md  PHASE1_TASKS_TRACKER.md  PHASE2_IMPACT_SCOPE_ANALYSIS.md  PHASE2_OPTIMIZATIONS.md  PHASE3_WORKSPACE_MIGRATION.md  README.md  REGRESSION.md  RESOURCE_DOWNLOAD_GUIDE.md  SECURITY_SCANNING.md  TERMINOLOGY.md  TODO_CLEANUP_LOG.md  TRANSLATION_PROJECT_COMPLETION.md  TRANSLATION_SYSTEM_ARCHITECTURE.md  TRANSLATION_TROUBLESHOOTING.md  TREE_SITTER_COMMIT_DEMO.md  WORKSPACE_MIGRATION.md  dependency-analysis-in-review.md  development-summary-story03.md  mcp-implementation-notes.md  review-output-fix.md  testing-issue-resolution.md  tree_sitter_refactor.md
examples/: ai-analysis-demo.md  container_statistics_demo.rs  error_handling_demo.rs  mcp_client_simple.rs  mcp_registry_demo.rs  prompt_engine_demo.rs  security_review_demo.rs  simple_container_usage.rs  sse_demo.py  translation-examples.md
scripts/: build.sh  check-code-quality.sh  fix-git-errors.sh  test.sh  update-imports.sh  update_imports.sh
src/: ai.rs  analysis.rs  app.rs  args.rs  ast_grep_installer.rs  ast_grep_integration.rs  commit.rs  config.rs  config_init.rs  context.rs  devops.rs  error.rs  error_ext.rs  error_tests.rs  errors.rs  features.rs  git.rs  lib.rs  main.rs  main_old.rs  mcp_bridge.rs  project_insights.rs  prompt_engine.rs  prompts.rs  resource_manager.rs  review.rs  review.rs.backup  scan.rs  scanner.rs  security_insights.rs  security_review.rs  utils.rs
src.backup.20250912/: ai.rs  args.rs  devops.rs  features.rs  prompts.rs  resource_manager.rs  scan.rs
test_code/: TestClass.java
tests/: api_comparison_test.rs  commit_untracked.rs  container_v2_test.rs  core_functionality_test.rs  detailed_api_test.rs  git_test.rs  graph_summary_v3.rs  integration_commit_test.rs  integration_tests.rs  mcp_service_test.rs  minimal_debug_test.rs  query_manager_test.rs  simple_api_test.rs  simple_container_test.rs  translation_integration.rs  tree_sitter_cache.rs  tree_sitter_cache_concurrency_stress.rs  tree_sitter_concurrency.rs  tree_sitter_integration.rs  working_simple_api_demo.rs  workspace_integration_test.rs
tools/: analyze_dependencies.py  build-variants.sh  dependency_analysis.json  fix-analysis-errors.sh  fix-analysis-imports.sh  fix-core-result-types.sh  fix-giterror-conversions.sh  migrate-to-workspace.sh  migrate_types.sh  test-features.sh  update-analysis-imports.sh  update-core-imports.sh
(+366 files in other folders)
