[package]
name = "gitai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitai"
path = "src/main.rs"

[[bin]]
name = "gitai-mcp"
path = "src/bin/gitai-mcp.rs"

[lib]
name = "gitai"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
anyhow = "1.0.95"
flate2 = "1.0.35"
tar = "0.4.43"
walkdir = "2.5.0"
tempfile = "3.20.0"
md5 = "0.7.0"
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4.22"
env_logger = "0.11.6"
parking_lot = "0.12"
async-trait = "0.1.86"
tree-sitter = "0.20"
tree-sitter-java = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# MCP dependencies
rmcp = { version = "0.1", features = ["server", "client", "transport-io"] }
warp = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.20.0"