[package]
name = "gitai"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "gitai"
path = "src/main.rs"

[[bin]]
name = "gitai-mcp"
path = "src/bin/gitai-mcp.rs"
required-features = ["mcp"]

[lib]
name = "gitai"
path = "src/lib.rs"

[features]
# 默认功能
default = ["ai", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "security"]

# 完整功能
full = [
    "ai",
    "mcp",
    "security",
    "metrics",
    "devops",
    "tree-sitter-all",
    "update-notifier"
]

# 最小功能（仅基础命令行工具）
minimal = []

# AI 功能
ai = []

# MCP 服务器功能
mcp = []

# 安全扫描功能
security = []

# 度量功能
metrics = []

# DevOps 集成
devops = []

# 更新通知功能
update-notifier = []

# Tree-sitter 语言支持
tree-sitter-all = [
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-c",
    "tree-sitter-cpp"
]

tree-sitter-rust = ["dep:tree-sitter-rust"]
tree-sitter-java = ["dep:tree-sitter-java"]
tree-sitter-python = ["dep:tree-sitter-python"]
tree-sitter-javascript = ["dep:tree-sitter-javascript"]
tree-sitter-typescript = ["dep:tree-sitter-typescript"]
tree-sitter-go = ["dep:tree-sitter-go"]
tree-sitter-c = ["dep:tree-sitter-c"]
tree-sitter-cpp = ["dep:tree-sitter-cpp"]

[dependencies]
# 核心依赖（始终需要）
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
toml = "0.8.22"
anyhow = "1.0.95"
log = "0.4.22"
env_logger = "0.11.6"
parking_lot = "0.12"
async-trait = "0.1.86"
lazy_static = "1.5"
chrono = { version = "0.4.40", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
walkdir = "2.5.0"
tempfile = "3.20.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
num_cpus = "1.16"

# 缓存和哈希
lru = "0.12"
md5 = "0.7.0"

# 压缩（用于资源管理）
flate2 = "1.0.35"
tar = "0.4.43"

# 暂时保持为必需依赖，后续逐步迁移
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
csv = { version = "1.3" }
rmcp = { version = "0.1", features = ["server", "client", "transport-io"] }
warp = { version = "0.3" }
futures-util = { version = "0.3" }

# Tree-sitter 核心
tree-sitter = "0.20"

# Tree-sitter 语言支持（可选）
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-java = { version = "0.20", optional = true }
tree-sitter-python = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
tree-sitter-typescript = { version = "0.20", optional = true }
tree-sitter-go = { version = "0.20", optional = true }
tree-sitter-c = { version = "0.20", optional = true }
tree-sitter-cpp = { version = "0.20", optional = true }

# Additional dependencies for resource management
zip = "0.6"
shellexpand = "3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 跨平台路径处理
directories = "5.0"
home = "0.5"

# 高性能并发HashMap
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.20.0"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
tokio-test = "0.4"
futures = "0.3"

[[bench]]
name = "architectural_impact_bench"
harness = false

[[bench]]
name = "container_v2_bench"
harness = false

[[bench]]
name = "tree_sitter_bench"
harness = false

[[bench]]
name = "tree_sitter_concurrency_bench"
harness = false
