# GitAI Workspace Configuration
# This will replace the current Cargo.toml after migration

[workspace]
members = [
    "crates/gitai-core",
    "crates/gitai-types", 
    # "crates/gitai-cli",
    # "crates/gitai-mcp",
    # "crates/gitai-metrics",
    # "crates/gitai-security",
    # "crates/gitai-analysis",
    # "crates/gitai-bin",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nehcuh"]
license = "MIT"
repository = "https://github.com/nehcuh/gitai"
homepage = "https://github.com/nehcuh/gitai"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0.95"
async-trait = "0.1.86"
thiserror = "2.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"

# Async runtime
tokio = { version = "1.45.0", features = ["full"] }
futures-util = "0.3"

# Logging and tracing
log = "0.4.22"
env_logger = "0.11.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date and time
chrono = { version = "0.4.40", features = ["serde"] }

# File system
dirs = "6.0.0"
walkdir = "2.5.0"
tempfile = "3.20.0"
shellexpand = "3.1"

# Compression
flate2 = "1.0.35"
tar = "0.4.43"
zip = "0.6"

# HTTP client
reqwest = { version = "0.12.15", features = ["json", "blocking"] }

# Caching
lru = "0.12"
md5 = "0.7.0"
parking_lot = "0.12"

# CLI
clap = { version = "4.5.38", features = ["derive"] }

# Lazy initialization
lazy_static = "1.5"

# Tree-sitter
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# MCP support
rmcp = { version = "0.1", features = ["server", "client", "transport-io"] }
warp = "0.3"

# CSV
csv = "1.3"

# Performance monitoring
opentelemetry = { version = "0.27" }
opentelemetry-jaeger = { version = "0.26" }
tracing-opentelemetry = { version = "0.28" }

# Graph algorithms
petgraph = "0.6"
rayon = "1.10"

[workspace.dev-dependencies]
tempfile = "3.20.0"
criterion = "0.5"
mockito = "1.6"
proptest = "1.6"
test-case = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
