[package]
name = "gitai-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "gitai_adapters"
path = "src/lib.rs"

[dependencies]
# shared types and core interfaces
gitai-types = { path = "../gitai-types" }
gitai-core = { path = "../gitai-core" }

# async and utils from workspace
async-trait = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }

