[package]
name = "gitai-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for GitAI"

[[bin]]
name = "gitai"
path = "src/main.rs"

[dependencies]
 gitai-types = { path = "../gitai-types" }
 gitai-core = { path = "../gitai-core" }
 gitai-analysis = { path = "../gitai-analysis" }
 gitai-security = { path = "../gitai-security" }
 gitai-mcp = { path = "../gitai-mcp" }
 gitai-evaluation = { path = "../gitai-evaluation" }

 # CLI framework
 clap = { workspace = true }

 # Async runtime
 tokio = { workspace = true }

 # Serialization
 serde = { workspace = true }
 serde_json = { workspace = true }
 toml = { workspace = true }

# HTTP client
 reqwest = { workspace = true }
 # Async streams utilities for concurrency
 futures-util = { workspace = true }
 
 # Logging
 log = { workspace = true }
 env_logger = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }

 # Date and time
 chrono = { workspace = true }

 # Error handling
 anyhow = { workspace = true }

 # File system
 dirs = { workspace = true }

 # Terminal colors
 colored = "2.0"

[features]
# Keep defaults minimal to avoid pulling optional subsystems during migration
default = ["minimal"]
full-analysis = ["gitai-analysis/full"]
security = ["gitai-security/full"]
minimal = []

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = "2.0"
predicates = "3.0"
