[package]
name = "gitai-evaluation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gitai_evaluation"
path = "src/lib.rs"

[dependencies]
# Workspace shared deps
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }

# For hashing and similarity
sha2 = "0.10"
hex = "0.4"
dissimilar = "1.0"
regex = "1.10"

